--- a/lib/nxos.pm.in
+++ b/lib/nxos.pm.in
@@ -20,8 +20,8 @@ package nxos;
 ##    documentation and/or other materials provided with the distribution.
 ## 3. All advertising materials mentioning features or use of this software
 ##    must display the following acknowledgement:
-##        This product includes software developed by Terrapin Communications,
-##        Inc. and its contributors for RANCID.
+##	This product includes software developed by Terrapin Communications,
+##	Inc. and its contributors for RANCID.
 ## 4. Neither the name of Terrapin Communications, Inc. nor the names of its
 ##    contributors may be used to endorse or promote products derived from
 ##    this software without specific prior written permission.
@@ -700,7 +700,7 @@ sub ShowCores {
 	return(1) if /Line has invalid autocommand /;
 	return(1) if /(Invalid input detected|Type help or )/;
 	return(1) if (/\% Invalid command at /);
-	return(-1) if (/No token match at /);	# 1000v
+	return(1) if (/No token match at /);	# 1000v
 	return(-1) if (/\% Permission denied/);
 	return(-1) if (/command authorization failed/i);
 
@@ -723,7 +723,7 @@ sub ShowFex {
 	return(1) if /Line has invalid autocommand /;
 	return(1) if /(Invalid input detected|Type help or )/;
 	return(1) if (/\% Invalid command at /);
-	return(1) if (/No token match at /);	# 1000v
+	return(1) if (/% Invalid number at /);	# 1000v
 	return(-1) if (/\% Permission denied/);
 	return(-1) if (/command authorization failed/i);
 
