--- a/lib/nxos.pm.in
+++ b/lib/nxos.pm.in
@@ -488,7 +488,7 @@ sub DirSlotN {
 	return(1) if /(Open device \S+ failed|Error opening \S+:)/;
 
 	# Drop ee.log
-	/\s+ee\.log\.*$/ && next;
+	/\s+ee\.log\..*$/ && next;
 
 	# Drop accounting.log
 	/\s+accounting\.log$/ && next;
