--- a/bin/blogin.in
+++ b/bin/blogin.in
@@ -379,6 +379,9 @@ proc login { router user userpswd passwd enapasswd prompt cmethod cyphertype } {
 	    send_user "\nError: host key mismatch for $router.  Update the SSH known_hosts file accordingly.\n"
 	    return 1
 	}
+	-nocase -re "^warning: remote host denied authentication agent forwarding." {
+	    exp_continue;
+	}
 	-re "$u_prompt"	{ send -- "$user\r"
 	    expect {
 		eof			{ send_user "\nError: Couldn't login\n"; wait; return 1 }
