--- a/bin/jlogin.in
+++ b/bin/jlogin.in
@@ -135,6 +135,9 @@ proc login { router user passwd cmethod cyphertype identfile} {
 		send "no\r"
 		send_user "\nError: host key mismatch for $router.  Update the SSH known_hosts file accordingly.\n"
 		return 1 }
+	    -nocase -re "^warning: remote host denied authentication agent forwarding." {
+		exp_continue;
+	    }
 	    -re "(Username|\[\r\n]login):"	{
 						  send -- "$user\r"
 						  exp_continue
