--- a/bin/mtlogin.in
+++ b/bin/mtlogin.in
@@ -121,6 +121,9 @@ proc login { router user userpswd passwd prompt cmethod cyphertype identfile } {
 	    send "no\r"
 	    send_user "\nError: host key mismatch for $router.  Update the SSH known_hosts file accordingly.\n"
 	    return 1 }
+	-nocase -re "^warning: remote host denied authentication agent forwarding." {
+	    exp_continue;
+	}
 	-re "Enter passphrase.*: "	{
 					  # sleep to allow time for stty -echo
 					  sleep .3
