--- a/bin/xilogin.in
+++ b/bin/xilogin.in
@@ -475,6 +475,9 @@ proc login { router user userpswd passwd enapasswd cmethod cyphertype identfile 
 	    catch {close}; catch {wait};
 	    return 1
 	}
+	-nocase -re "^warning: remote host denied authentication agent forwarding." {
+	    exp_continue;
+	}
 	-nocase -re "^warning:"	{ exp_continue }
 	-re "(denied|Sorry)"	{
 				  send_user "\nError: Check your passwd for $router\n"
