--- a/rancid/bin/alogin.in
+++ b/rancid/bin/alogin.in
@@ -360,6 +360,9 @@ proc login { router user userpswd passwd prompt cmethod cyphertype } {
 	    send_user "\nError: host key mismatch for $router.  Update the SSH known_hosts file accordingly.\n"
 	    return 1
 	}
+	-nocase -re "^warning: remote host denied authentication agent forwarding." {
+	    exp_continue;
+	}
 	-re "NOTICE:\[^\n\r]* - display now \[^\n\r]*:" {
 	    send "no\r"
 	    exp_continue
