--- a/rancid/bin/clogin.in
+++ b/rancid/bin/clogin.in
@@ -229,6 +229,9 @@ proc login { router user userpswd passwd enapasswd cmethod cyphertype identfile 
 	    catch {close}; catch {wait};
 	    return 1
 	}
+	-nocase -re "^warning: remote host denied authentication agent forwarding." {
+	    exp_continue;
+	}
 	-re "(denied|Sorry)"	{
 				  send_user "\nError: Check your passwd for $router\n"
 				  catch {close}; catch {wait}; return 1
@@ -452,7 +455,7 @@ proc run_commands { prompt command } {
 						}
 	-re "\[\n\r]+"				{ exp_continue }
 	timeout					{ catch {close}; catch {wait};
-						  return 0
+						  return 1
 						}
 	eof					{ return 0 }
     }
