--- a/rancid/bin/hlogin.in
+++ b/rancid/bin/hlogin.in
@@ -403,6 +403,9 @@ proc login { router user userpswd passwd enapasswd cmethod cyphertype identfile 
 	    send_user "\nError: host key mismatch for $router.  Update the SSH known_hosts file accordingly.\n"
 	    return 1
 	}
+	-nocase -re "^warning: remote host denied authentication agent forwarding." {
+	    exp_continue;
+	}
 	eof { send_user "\nError: Couldn't login\n"; wait; return 1 }
 	-nocase "unknown host\r" {
 	    catch {close}; catch {wait};
