--- a/rancid/bin/panlogin.in
+++ b/rancid/bin/panlogin.in
@@ -439,6 +439,9 @@ proc login { router user userpswd passwd cmethod cyphertype identfile } {
 	    send "no\r"
 	    send_user "\nError: host key mismatch for $router.  Update the SSH known_hosts file accordingly.\n"
 	    return 1 }
+	-nocase -re "^warning: remote host denied authentication agent forwarding." {
+	    exp_continue;
+	}
 	-re "(denied|Sorry)"	{
 				  send_user "\nError: Check your passwd for $router\n"
 				  catch {close}; wait; return 1
