--- a/rancid/lib/ios.pm.in
+++ b/rancid/lib/ios.pm.in
@@ -729,6 +729,7 @@ sub ShowEnv {
 	    ProcessHistory("COMMENTS","keysort","E2","!Power: $1\n") && next;
 	/^\s*((RPS|power-supply) (\d|is) .*)/i &&
 	    ProcessHistory("COMMENTS","keysort","E2","!Power: $1\n") && next;
+	/^\s*FAN \d RPM is \d+$/ && next;
 	if (/^\s*((FAN|fan-tray) (\d|is) .*)/i) {
 	    my($tmp) = ($1);
 	    $tmp =~ s/, \S+ speed setting//;
