--- a/rancid/bin/Makefile.in
+++ b/rancid/bin/Makefile.in
@@ -268,6 +268,8 @@ LDFLAGS = @LDFLAGS@
 LG_PING_CMD = @LG_PING_CMD@
 LIBOBJS = @LIBOBJS@
 LIBS = @LIBS@
+LOCKPROG = @LOCKPROG@
+LOCKPROG_PATH = @LOCKPROG_PATH@
 LTLIBOBJS = @LTLIBOBJS@
 MAILPLUS = @MAILPLUS@
 MAINT = @MAINT@
@@ -390,6 +392,7 @@ auto_edit = sed \
 	-e 's,@PERLV_PATH\@,$(PERLV_PATH),g' \
 	-e 's,@LG_PING_CMD\@,$(LG_PING_CMD),g' \
 	-e 's,@ADMINMAILPLUS\@,$(ADMINMAILPLUS),g' \
+	-e 's,@LOCKPROG\@,$(LOCKPROG),g' \
 	-e 's,@MAILPLUS\@,$(MAILPLUS),g' \
 	-e 's,@PACKAGE\@,$(PACKAGE),g' \
 	-e 's,@SVN_FSTYPE\@,$(SVN_FSTYPE),g' \
