--- a/lib/ios.pm.in
+++ b/lib/ios.pm.in
@@ -2209,19 +2209,23 @@ TOP:
 	/^access-list\s+(\d\d?)\s+(\S+)\s+(\S+)/ &&
 	    ProcessHistory("ACL $1 $2","$aclsort","$3","$_") && next;
 	# order extended access-lists
+	if ($aclfilterseq) {
 	/^access-list\s+(\d\d\d)\s+(\S+)\s+(\S+)\s+host\s+(\S+)/ &&
 	    ProcessHistory("EACL $1 $2","$aclsort","$4","$_") && next;
 	/^access-list\s+(\d\d\d)\s+(\S+)\s+(\S+)\s+(\d\S+)/ &&
 	    ProcessHistory("EACL $1 $2","$aclsort","$4","$_") && next;
 	/^access-list\s+(\d\d\d)\s+(\S+)\s+(\S+)\s+any/ &&
 	    ProcessHistory("EACL $1 $2","$aclsort","0.0.0.0","$_") && next;
+	}
 	# order arp lists
 	/^arp\s+(\d+\.\d+\.\d+\.\d+)\s+/ &&
 	    ProcessHistory("ARP","$aclsort","$1","$_") && next;
-	/^ip(v6)? prefix-list\s+(\S+)\s+seq\s+(\d+)\s+(permit|deny)\s+(\S+)(.*)/
-	    && ProcessHistory("PACL $2 $4","$aclsort","$5",
-			      "ip$1 prefix-list $2 $4 $5$6\n")
-	    && next;
+	if ($aclfilterseq) {
+	    /^ip(v6)? prefix-list\s+(\S+)\s+seq\s+(\d+)\s+(permit|deny)\s+(\S+)(.*)/
+		&& ProcessHistory("PACL $2 $4","$aclsort","$5",
+				  "ip$1 prefix-list $2 $4 $5$6\n")
+		&& next;
+	}
 	# order logging statements
 	/^logging (\d+\.\d+\.\d+\.\d+)/ &&
 	    ProcessHistory("LOGGING","ipsort","$1","$_") && next;
