--- a/lib/iosxr.pm.in
+++ b/lib/iosxr.pm.in
@@ -1206,7 +1206,7 @@ sub WriteTerm {
 	/^access-list\s+(\d\d\d)\s+(\S+)\s+ip\s+any/ &&
 	    ProcessHistory("EACL $1 $2","$aclsort","0.0.0.0","$_") && next;
 	# sort ipv{4,6} access-lists
-	if (/^ipv(4|6) access-list (\S+)\s*$/) {
+	if ($aclfilterseq && /^ipv(4|6) access-list (\S+)\s*$/) {
 	    my($nlri, $key) = ($1, $2);
 	    my($seq, $cmd);
 	    ProcessHistory("ACL $nlri $key","","","$_");
@@ -1258,9 +1258,11 @@ sub WriteTerm {
 	/^ip prefix-list\s+(\S+)\s+seq\s+(\d+)\s+(permit|deny)\s+(\d\S+)(.*)/ &&
 	    ProcessHistory("PACL $1 $3","$aclsort","$4","ip prefix-list $1 $3 $4$5\n")
 	    && next;
-	/^ip(v4|v6) prefix-list\s+(\S+)\s+seq\s+(\d+)\s+(permit|deny)\s+(\S+)(.*)/ &&
-	    ProcessHistory("PACL $2 $4","$aclsort","$5","ip$1 prefix-list $2 $4 $5$6\n")
-	    && next;
+	if ($aclfilterseq) {
+	    /^ip(v4|v6) prefix-list\s+(\S+)\s+seq\s+(\d+)\s+(permit|deny)\s+(\S+)(.*)/ &&
+		ProcessHistory("PACL $2 $4","$aclsort","$5","ip$1 prefix-list $2 $4 $5$6\n")
+		&& next;
+	}
 	# order logging statements
 	/^logging (\d+\.\d+\.\d+\.\d+)/ &&
 	    ProcessHistory("LOGGING","ipsort","$1","$_") && next;
