--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -272,7 +272,8 @@ top_srcdir = @top_srcdir@
 AUTOMAKE_OPTIONS = foreign no-dependencies
 my_pkglibdir = $(pkglibdir)
 my_pkglib_DATA = rancid.pm arbor.pm ciscowlc.pm dell.pm eos.pm foundry.pm \
-		 ios.pm iosxr.pm junos.pm mrv.pm nxos.pm panos.pm rbt.pm
+		 ios.pm iosxr.pm junos.pm mrv.pm nxos.pm panos.pm rbt.pm \
+		 wavesvros.pm
 
 pkglib_in = $(my_pkglib_DATA:%=%.in)
 RANLIB = :
@@ -301,7 +302,9 @@ auto_edit = sed \
 	-e 's,@PACKAGE\@,$(PACKAGE),g' \
 	-e 's,@SVN_FSTYPE\@,$(SVN_FSTYPE),g' \
 	-e 's,@VERSION\@,$(VERSION),g' \
-	-e 's,@COPYYEARS\@,$(COPYYEARS),g'
+	-e 's,@COPYYEARS\@,$(COPYYEARS),g' \
+	-e '/@copyright@/r ../COPYING' \
+	-e '/@copyright@/d'
 
 all: all-am
 
@@ -534,6 +537,7 @@ mrv.pm: mrv.pm.in
 nxos.pm: nxos.pm.in
 panos.pm: panos.pm.in
 rbt.pm: rbt.pm.in
+wavesvros.pm: wavesvros.pm.in
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
