ios.pm: collect show activation-key on ASA - suggested by Bob Brunette
eg: output that bob provided.

firewall# show activation-key
Serial Number:  FCHxxxxxxxx
Running Permanent Activation Key: 0xnnnnnnnn 0xnnnnnnnn 0xnnnnnnnn
0xnnnnnnnn 0xnnnnnnnn
Running Timebased Activation Key: 0xnnnnnnnn 0xnnnnnnnn 0xnnnnnnnn
0xnnnnnnnn 0xnnnnnnnn

Licensed features for this platform:
Maximum Physical Interfaces       : Unlimited      perpetual
Maximum VLANs                     : 300            perpetual
Inside Hosts                      : Unlimited      perpetual
Failover                          : Active/Active  perpetual
Encryption-DES                    : Enabled        perpetual
Encryption-3DES-AES               : Enabled        perpetual
Security Contexts                 : 7              3 days
GTP/GPRS                          : Disabled       perpetual
AnyConnect Premium Peers          : 2500           3 days
AnyConnect Essentials             : 2500           perpetual
Other VPN Peers                   : 2500           perpetual
Total VPN Peers                   : 2500           perpetual
Shared License                    : Disabled       perpetual
AnyConnect for Mobile             : Enabled        perpetual
AnyConnect for Cisco VPN Phone    : Enabled        3 days
Advanced Endpoint Assessment      : Disabled       perpetual
UC Phone Proxy Sessions           : 52             3 days
Total UC Proxy Sessions           : 52             3 days
Botnet Traffic Filter             : Disabled       perpetual
Intercompany Media Engine         : Disabled       perpetual
IPS Module                        : Enabled        perpetual
Cluster                           : Enabled        perpetual
Cluster Members                   : 2              perpetual

This platform has an ASA5545 VPN Premium license.


Failover cluster licensed features for this platform:
Maximum Physical Interfaces       : Unlimited      perpetual
Maximum VLANs                     : 300            perpetual
Inside 

--- a/lib/ios.pm.in
+++ b/lib/ios.pm.in
@@ -431,6 +431,59 @@ LINE:		while (<$INPUT>) {
     return(0);
 }
 
+# This routine parses "show activation-key" on ASA
+sub ShowActivationKey {
+    my($INPUT, $OUTPUT, $cmd) = @_;
+    print STDERR "    In ShowMTU: $_" if ($debug);
+
+    while (<$INPUT>) {
+	tr/\015//d;
+	last if (/^$prompt/);
+	next if (/^(\s*|\s*$cmd\s*)$/);
+	next if (/^\s+\^$/);
+	return(1) if (/Line has invalid autocommand /);
+	return(1) if (/(invalid (input|command) detected|type help or )/i);
+	# the pager can not be disabled per-session on the PIX
+	if (/^(<-+ More -+>)/) {
+	    my($len) = length($1);
+	    s/^$1\s{$len}//;
+	}
+
+	if (/^(failover|licensed) .* for this platform:/i ||
+	    /^active .* activation key/i) {
+	    ProcessHistory("COMMENTS","keysort","LICENSE","! $_");
+	    # parse license features/permanents/etc until an empty line
+	    while (<$INPUT>) {
+		tr/\015//d;
+		goto OUT if (/^$prompt/);	# should not occur
+		# the pager can not be disabled per-session on the PIX
+		if (/^(<-+ More -+>)/) {
+		    my($len) = length($1);
+		    s/^$1\s{$len}//;
+		}
+		if (/^\s*$/) {
+		    ProcessHistory("COMMENTS","keysort","LICENSE","!\n");
+		    last;
+		}
+		if (/^([^:]+: \S+\s+)(.*)/) {
+		    my($L) = $1;
+		    my($T) = $2;
+		    if ($T !~ /perpetual/i) {
+			$T = "limited";
+		    }
+	    	    ProcessHistory("COMMENTS","keysort","LICENSE","! $L $T\n");
+		} else {
+		    ProcessHistory("COMMENTS","keysort","LICENSE","! $_\n");
+		}
+	    }
+	    next;
+	}
+	ProcessHistory("COMMENTS","keysort","LICENSE","! $_");
+    }
+OUT:ProcessHistory("COMMENTS","keysort","LICENSE","!\n");
+    return(0);
+}
+
 # This routine parses "showCellular"
 sub ShowCellular {
     my($INPUT, $OUTPUT, $cmd) = @_;
